# math-reasoning

./: .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml  remote_entrypoint.py  remote_formalizer_training_job.py  requirements.txt
notebooks/: check_data.ipynb  experiments.ipynb
scripts/: resume_formalizer.py  train_formalizer.py
src/inference/: base.py  formalizer_engine.py
src/models/: common.py  transformer.py
src/preprocessing/: ds_loader.py  fim.py  hf_tokenizer.py  loader.py  memmap_builder.py  scrape_datasets.py  scrape_posttraining.py  tokenizer.py
src/preprocessing/pre_training/: load_dataset.py  loader.py  tokenizer.py
src/scripts/: data_scrap.py  scrape_datasets.sh
src/trainer/: base.py  formalizer_trainer.py  resume_formalizer_training_job.py  sft.py
src/utils/: count_tokens.py  logger.py  runner.py
tests/: test_formalizer_trainer.py  test_transformer.py  trainer_tests.py  transformer_test.py
