[project]
name = "math-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "datasets<4.0.0",
    "dotenv>=0.9.9",
    "einops>=0.8.2",
    "mlflow>=3.8.1",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "torch>=2.11.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "vastai-sdk>=0.2.6",
]
